the buttons ready

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="css/global.css">
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="web_icons.css">
-<link rel="stylesheet" href="css/media.css">
+<link rel="stylesheet" href="css/buttons.css">
 <link rel="stylesheet" href="css/animate.min.css">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/libs/jquery.min.js"><\/script>')</script>
@@ -18,12 +18,10 @@
 </head>
 <body>
   <img src="original-button.png" alt="">
-<button class="button-light">
-  hello world
-</button>
 
-<button class="button button-test">купить</button>
-<a href="" class="button button-tes"t>купить</a>
+
+<button class="button button">купить</button>
+<a href="" class="button button-blue">купить</a>
 
 </body>
 </html>
