--- a/index.html
+++ b/index.html
@@ -16,12 +16,34 @@
 <script>window.jQuery || document.write('<script src="js/libs/jquery.min.js"><\/script>')</script>
 <script src="js/libs/modernizr.min.js"></script>
 </head>
-<body>
-  <img src="original-button.png" alt="">
+<body class="all-wrap g-outer">
+ 
+ <div class="header m-head">
+   <nav class="top-nav">
+     <menu class="top-nav-menu">
+         <li class="top-nav-item">
+          <a href="" class="top-nav-item-url"></a>
+        </li>
+         <li class="top-nav-item">
+          <a href="" class="top-nav-item-url"></a>
+        </li>
+         <li class="top-nav-item">
+          <a href="" class="top-nav-item-url"></a>
+        </li>
+         <li class="top-nav-item">
+          <a href="" class="top-nav-item-url"></a>
+        </li>
+         <li class="top-nav-item">
+          <a href="" class="top-nav-item-url"></a>
+        </li>
+         <li class="top-nav-item">
+          <a href="" class="top-nav-item-url"></a>
+        </li>
+       </menu>  
+   </nav>
+   <div class="b-search"></div>
+ </div>
 
-
-<button class="button button">купить</button>
-<a href="" class="button button-blue">купить</a>
 
 </body>
 </html>
