--- a/index.html
+++ b/index.html
@@ -9,40 +9,54 @@
 <meta name="viewport" content="width=device-width">
 <link rel="stylesheet" href="css/global.css">
 <link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="web_icons.css">
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="css/buttons.css">
+<link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/animate.min.css">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/libs/jquery.min.js"><\/script>')</script>
 <script src="js/libs/modernizr.min.js"></script>
+<script src="js/functions.js"></script>
 </head>
 <body class="all-wrap g-outer">
  
- <div class="header m-head">
-   <nav class="top-nav">
-     <menu class="top-nav-menu">
+ <header class="m-head g-inner cf">
+   <nav class="top-nav fl">
+     <menu class="top-nav-menu ">
          <li class="top-nav-item">
-          <a href="" class="top-nav-item-url"></a>
+          <a href="" class="top-nav-item-url active">Главная</a>
         </li>
          <li class="top-nav-item">
-          <a href="" class="top-nav-item-url"></a>
+          <a href="" class="top-nav-item-url">Каталог Продукции</a>
         </li>
          <li class="top-nav-item">
-          <a href="" class="top-nav-item-url"></a>
+          <a href="" class="top-nav-item-url">Программное обеспечение</a>
         </li>
          <li class="top-nav-item">
-          <a href="" class="top-nav-item-url"></a>
+          <a href="" class="top-nav-item-url">реклама</a>
         </li>
          <li class="top-nav-item">
-          <a href="" class="top-nav-item-url"></a>
+          <a href="" class="top-nav-item-url">Услуги</a>
         </li>
          <li class="top-nav-item">
-          <a href="" class="top-nav-item-url"></a>
+          <a href="" class="top-nav-item-url">Контакты</a>
         </li>
-       </menu>  
-   </nav>
-   <div class="b-search"></div>
- </div>
+       </menu> <!-- top-nav-menu -->
+   </nav>  <!-- top-nav -->
+   <div class="b-search fr rel">
+     <a href="" class="b-search-opener" id="open-search">Поиск</a>
+     <div class="b-search-wrap abs" id="search-box">
+       <form action="/" name="q" method="get">
+         <div class="b-search-input-wrap rel">
+           <input type="text" class="g-input-field b-search-field">
+         </div>
+         <button class="b-search-submit abs" title="Искать">Искать</button>
+       </form>
+     </div>  <!-- #search-box -->
+   </div> <!-- b-search -->
+   </header> <!-- m-head -->
+ </div> <!-- all-wrap -->
 
 
 </body>
