--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <link rel="stylesheet" href="css/buttons.css">
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/animate.min.css">
+<link rel="stylesheet" href="css/mystyle.css">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/libs/jquery.min.js"><\/script>')</script>
 <script src="js/libs/modernizr.min.js"></script>
@@ -56,6 +57,13 @@
      </div>  <!-- #search-box -->
    </div> <!-- b-search -->
    </header> <!-- m-head -->
+   <div class="b sec-head g-inner">
+     <div class="b-social b-socail_header">
+       <a href="#" class="soc-tw b-social-items b-socail-items_header">sasd</a>
+       <a href="#" class="soc-fb b-social-items b-socail-items_header"></a>
+       <a href="#" class="soc-vk b-social-items b-socail-items_header"></a>
+     </div>
+   </div>
  </div> <!-- all-wrap -->
 
 
