--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link rel="stylesheet" href="css/buttons.css">
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/animate.min.css">
-<link rel="stylesheet" href="css/mystyle.css">
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/libs/jquery.min.js"><\/script>')</script>
 <script src="js/libs/modernizr.min.js"></script>
@@ -57,12 +57,26 @@
      </div>  <!-- #search-box -->
    </div> <!-- b-search -->
    </header> <!-- m-head -->
-   <div class="b sec-head g-inner">
-     <div class="b-social b-socail_header">
-       <a href="#" class="soc-tw b-social-items b-socail-items_header">sasd</a>
-       <a href="#" class="soc-fb b-social-items b-socail-items_header"></a>
-       <a href="#" class="soc-vk b-social-items b-socail-items_header"></a>
-     </div>
+   <div class="b-sec-head g-inner cf">
+
+     <div class="b-social b-social_header fl">
+       <a href="#" class="soc-tw b-social-item b-socail-item_header"></a>
+       <a href="#" class="soc-fb b-social-item b-socail-item_header"></a>
+       <a href="#" class="soc-vk b-social-item b-socail-item_header"></a>
+     </div> <!-- b-social-header -->
+
+      <div class="b-phone fr">
+        <span class="b-phone-number">+7 495 876 83 72</span>
+      </div> <!-- b-phone -->
+
+      <h1 class="site-title">
+        <a href="" class="site-title-url">
+          <img src="images/logo.png" alt="" class="site-logo">
+        </a>
+      </h1> <!-- site-title -->
+   </div>  <!-- b-sec-head  -->
+   <div class="b-bnn g-outer">
+     
    </div>
  </div> <!-- all-wrap -->
 
