--- a/index.html
+++ b/index.html
@@ -302,8 +302,28 @@
         });
       </script>
     </article>
-  </section>
-</div>
+  </section><!-- site-info -->
+</div><!-- site-info-wrap -->
+<div class="b-main-blocks cf g-inner">
 
+  <section class="fl b-products b-products_main-page fl">
+    <h1 class="b-products_main_title main-title">
+      Попылярние товары
+    </h1>
+    <div class="products-block fr">
+      <article class="product-item fl">
+        
+      </article>
+    </div>
+  </section>
+
+  <section class="b-news b-news_main fr">
+    <h1 class="b-news_main_title">
+     <a href="#" class="b-news-title-url"> Новосты</a>  
+   </h1>
+    <main-title></main-title>
+  </section>
+
+</div>  <!-- b-main-blocks -->
 </body>
 </html>
