--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@
   </section>
 
   <section class="b-news b-news_main fr">
-    <h1 class="b-news_main_title">
-     <a href="#" class="b-news-title-url"> Новосты</a>  
+    <h1 class="b-news_main_title main-title">
+     <a href="#" class="b-news-title-url main-title-url"> Новосты</a>  
    </h1>
     <main-title></main-title>
   </section>
