--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
           </article>
         </div>
         <a href="#" id="p-prev" class="b-partners-carousel-button b-partners-carousel-button_prev">назад</a>
-        <a href="#" id="p-next" class="carousel-button b-partners-carousel-button_next">вперед</a>
+        <a href="#" id="p-next" class="b-partners-carousel-button b-partners-carousel-button_next">вперед</a>
       </section> <!-- b-partners -->
       <script>
         $('#partners-carousel').carouFredSel({
@@ -542,5 +542,16 @@
   </section> <!-- b-news -->
 
 </div>  <!-- b-main-blocks -->
+<div class="footer-wrap">
+<footer-wrap class="g-outer">
+  <footer class="m-foot g-inner cf">
+    <a href="#" class="site-logo_foot fl">
+      <img src="images/logo.png" alt="" width="160px;" class="logo_foot">
+    </a>
+    <div class="copyright">
+      Все права защищены © 2012 <a href="mailto:@nfo@infomarket.ru" class="copyright-url">info@informtek.ru</a>
+    </div>
+  </footer> <!-- m-foot -->
+</div><!-- footer-wrap --> 
 </body>
 </html>
