--- a/catalog.html
+++ b/catalog.html
@@ -87,7 +87,7 @@
     
     <div class="products-block fl">
 
-      <article class="product-item fl cf">
+      <article class="product-item product-item_main fl cf">
         <figure class="product-item-image fl">
           <a href="" class="product-item-image-url">
             <img src="images/item-image.png" alt="" class="product-item-img">
