END catalog page

--- a/index.html
+++ b/index.html
@@ -58,24 +58,26 @@
    </div> <!-- b-search -->
 </header> <!-- m-head -->
 
-<div class="b-sec-head g-inner cf">
+<div class="b-sec-head-wrap rel">
+  <div class="b-sec-head g-inner cf">
 
-   <div class="b-social b-social_header fl">
-     <a href="#" class="soc-tw b-social-item b-socail-item_header"></a>
-     <a href="#" class="soc-fb b-social-item b-socail-item_header"></a>
-     <a href="#" class="soc-vk b-social-item b-socail-item_header"></a>
-   </div> <!-- b-social-header -->
+     <div class="b-social b-social_header fl">
+       <a href="#" class="soc-tw b-social-item b-socail-item_header"></a>
+       <a href="#" class="soc-fb b-social-item b-socail-item_header"></a>
+       <a href="#" class="soc-vk b-social-item b-socail-item_header"></a>
+     </div> <!-- b-social-header -->
 
-    <div class="b-phone fr">
-      <span class="b-phone-number">+7 495 876 83 72</span>
-    </div> <!-- b-phone -->
+      <div class="b-phone fr">
+        <span class="b-phone-number">+7 495 876 83 72</span>
+      </div> <!-- b-phone -->
 
-    <h1 class="site-title">
-      <a href="" class="site-title-url">
-        <img src="images/logo.png" alt="" class="site-logo">
-      </a>
-    </h1> <!-- site-title -->
-</div>  <!-- b-sec-head  -->
+      <h1 class="site-title">
+        <a href="" class="site-title-url">
+          <img src="images/logo.png" alt="" class="site-logo">
+        </a>
+      </h1> <!-- site-title -->
+  </div>  <!-- b-sec-head  -->
+</div> <!-- b-sec-head-wrap --> 
 
 <div class="b-bnn-wrap g-outer">
  <section class="b-bnn g-inner cf">
