--- a/product.html
+++ b/product.html
@@ -98,8 +98,53 @@
 
 
   <section class="fl b-products b-products_main-page fr">
-      <div class="item-wrap rel"></div>
-        <h1 class="b-products_main_title main-title">
+      <div class="item-wrap rel">
+        <article class="item cf">
+          <figure class="item-image-box fl">
+            <a href="#" class="item-image-url">
+              <img src="images/item.png" alt=""47"" class="item-image">
+            </a>
+          </figure>  <!-- item-image-box -->
+          <div class="item-info">
+            <div class="item-short-description">
+              Односторонний информационный стенд
+            </div>
+            <h1 class="item-title item-title_item">Тотем 55</h1>
+            <div class="property-table property-table_item">
+
+              <div class="property-line cf">
+                <span class="fl property-name">Диагональ экрана:</span>
+                <strong class="property-value fl">"47"</strong>
+              </div> <!-- property-line -->
+              
+              <div class="property-line cf">
+                <span class="fl property-name">Размер: </span>
+                <strong class="property-value fl">2100x850x250 мм</strong>
+              </div> <!-- property-line -->
+              
+              <div class="property-line cf">
+                <span class="fl property-name">Масса:</span>
+                <strong class="property-value fl">180 кг</strong>
+              </div> <!-- property-line -->
+
+            </div>
+            <div class="item-description">
+              Снижает потребность в квалифицированном персонале для работы с клиентами, занимает небольшую площадь, совместим с любой компьютерной периферией. 
+            </div>
+            <div class="price-variant-box fl">
+              <div class="price-zone"><strong class="new-price">7 800</strong> руб.</div>
+              <div class="buy-zone"><button class="button">купить</button></div>
+            </div>  <!-- price-variant-box -->
+
+            <div class="price-variant-box fl">
+              <div class="price-zone"><strong class="new-price">от 2 800</strong> руб.</div>
+              <div class="buy-zone"><button class="button button-blue">арендовать</button></div>
+            </div>  <!-- price-variant-box -->
+          </div>  
+        </article> <!-- item -->
+      </div> <!-- item-wrap -->
+
+    <h1 class="b-products_main_title main-title">
       Похожие товары
     </h1>
     <div class="products-block fl">
