End product page

--- a/product.html
+++ b/product.html
@@ -130,18 +130,21 @@
             </div>
             <div class="item-description">
               Снижает потребность в квалифицированном персонале для работы с клиентами, занимает небольшую площадь, совместим с любой компьютерной периферией. 
-            </div>
+            </div> <!-- item-description -->
             <div class="price-variant-box fl">
-              <div class="price-zone"><strong class="new-price">7 800</strong> руб.</div>
+              <div class="price-zone price-zone_item"><strong class="new-price">7 800</strong> руб.</div>  <!-- price-zone -->
               <div class="buy-zone"><button class="button">купить</button></div>
             </div>  <!-- price-variant-box -->
 
             <div class="price-variant-box fl">
-              <div class="price-zone"><strong class="new-price">от 2 800</strong> руб.</div>
+              <div class="price-zone price-zone_item"><strong class="new-price">от 2 800</strong> руб.</div> <!-- price-zone -->
               <div class="buy-zone"><button class="button button-blue">арендовать</button></div>
             </div>  <!-- price-variant-box -->
-          </div>  
+          </div> <!-- item-info -->
         </article> <!-- item -->
+        <div class="item-variants">
+          
+        </div>
       </div> <!-- item-wrap -->
 
     <h1 class="b-products_main_title main-title">
